# sender-frenz

./: .lighthouserc.json  AGENTS.md  Dockerfile  Procfile  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml  lighthouse.yml
docs/: README.md  aesthetic.md  audit-2026-04.md  common-foundations.md  deploy.md  pwa.md  social-maintenance.md  space-builder.md
docs/plans/: 04_2026_api.md  04_2026_character-builder.md  04_2026_common-foundations.md  04_2026_game-loop.md  04_2026_persistence.md  04_2026_platform-roadmap.md  04_2026_required-maintenance.md  04_2026_social-maintenance.md
src/sender_frenz/: __init__.py
src/sender_frenz/api/: __init__.py  _helpers.py  app.py  deps.py  events.py  models.py
src/sender_frenz/api/routes/: __init__.py  action.py  level_up.py  session.py  stream.py
src/sender_frenz/character_builder/: __init__.py  appearance.py  avatar.py  catalog.py
src/sender_frenz/common/: __init__.py  config.py  decay.py  levels.py  models.py  quips.py  thresholds.py  types.py
src/sender_frenz/game_loop/: __init__.py  scheduler.py  session.py  tick.py
src/sender_frenz/persistence/: __init__.py  serialization.py  snapshots.py  store.py
src/sender_frenz/required_maintenance/: __init__.py  actions.py  needs.py
src/sender_frenz/social_maintenance/: __init__.py  effects.py  history.py  interactions.py
src/sender_frenz/space_builder/: __init__.py  catalog.py  room.py
tests/: __init__.py
tests/api/: conftest.py  test_action.py  test_app.py  test_deps.py  test_events.py  test_helpers.py  test_level_up.py  test_session.py
tests/character_builder/: __init__.py  test_appearance.py  test_avatar.py  test_catalog.py
tests/common/: __init__.py  test_config.py  test_decay.py  test_levels.py  test_models.py  test_quips.py  test_types.py
tests/game_loop/: test_scheduler.py  test_session.py  test_tick.py
tests/persistence/: test_serialization.py  test_snapshots.py  test_store.py
tests/pwa/: conftest.py  test_actions.py  test_errors.py  test_install.py  test_level_up.py  test_session.py  test_sse.py
tests/required_maintenance/: __init__.py  test_actions.py  test_needs.py
tests/social_maintenance/: __init__.py  test_effects.py  test_history.py  test_interactions.py
tests/space_builder/: __init__.py  test_catalog.py  test_room.py
web/: actions.js  app.js  avatar.js  index.html  install.js  level_up.js  manifest.json  style.css  sw.js  ui.js
