[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sender_frenz"]

[project]
name = "sender-frenz"
version = "0.1.0"
description = "A social Tamagotchi — raise your avatar from bare bones to a thriving creature."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "anyio>=4.0",
    "httpx>=0.28",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-playwright>=0.5",
    "ruff>=0.9",
]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear (opinionated correctness)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking (move imports into TYPE_CHECKING blocks)
    "ANN",  # flake8-annotations (require type annotations)
    "D",    # pydocstyle (require docstrings)
    "RUF",  # ruff-specific rules
    "PERF", # perflint (performance anti-patterns)
    "PT",   # flake8-pytest-style
    "TRY",  # tryceratops (exception handling best practices)
    "ERA",  # eradicate (no commented-out code)
]
ignore = [
    # D203 conflicts with D211; D213 conflicts with D212 — pick one of each pair
    "D203",
    "D213",
    # TRY003: dataclass __post_init__ validation messages are not public API;
    # creating a custom exception hierarchy for simple range checks is overengineering.
    "TRY003",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests don't need full annotation coverage or module-level docstrings
"tests/**/*.py" = ["ANN", "D"]
# FastAPI evaluates annotations at runtime via get_type_hints(); imports used in
# Annotated[T, Depends(f)] signatures must be top-level, not in TYPE_CHECKING.
"src/sender_frenz/api/deps.py" = ["TCH"]
"src/sender_frenz/api/routes/*.py" = ["TCH"]

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["tests.*", "tests.*.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ---------------------------------------------------------------------------
# Pytest + coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "--cov=src/sender_frenz --cov-report=term-missing --cov-fail-under=100 --ignore=tests/pwa"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/sender_frenz"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
